# Machine-Learning-DevOps

./: .gitignore  README.md  dvc-data.csv.dvc  pyproject.toml
.dvc/: config
.github/workflows/: greetings.yml
01-clean-code-principles/01-coding-best-practices/: 01-refactoring-wine-quality.py  02-optimizing-code-common-books.py  03-optimizing-code-holiday-gifts.py
01-clean-code-principles/02-production-ready-code/: 01-catching-errors.py
01-clean-code-principles/02-production-ready-code/02-testing/: nearest.py  test_nearest.py
01-clean-code-principles/02-production-ready-code/03-logging/: adding_numbers.py
02-building-reproducible-model-workflow/01-machine-learning-pipelines/: 02-upload_artifact.py  02-versioning-data-artifacts.py  use_artifact.py
02-building-reproducible-model-workflow/01-machine-learning-pipelines/01-argparse/: 01-argparse-refresh.py
02-building-reproducible-model-workflow/01-machine-learning-pipelines/03-ml-pipeline/: MLProject  conda.yml  download_data.py
02-building-reproducible-model-workflow/01-machine-learning-pipelines/04-linking-components/: MLproject  conda.yml  config.yaml  main.py
02-building-reproducible-model-workflow/01-machine-learning-pipelines/demos/: 02-versioning-weights-biases.py
02-building-reproducible-model-workflow/02-data-exploration-and-preparation/01-exploratory-data-analysis/: conda.yml
02-building-reproducible-model-workflow/02-data-exploration-and-preparation/02-clean-preprocess/: MLproject  conda.yml  run.py
02-building-reproducible-model-workflow/02-data-exploration-and-preparation/03-data-segreation/: MLproject  conda.yml  run.py
05-model-reporting-monitoring/03-calling-api-endpoints/: call_api_endpoint.py
scripts/linting/: bach-lint.bat  bash-lint.sh
(+62 files in other folders)
