[tool.poetry]
name = "machine-learning-devops"
version = "0.1.0"
description = ""
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
