[tool.poetry]
name = "machine-learning-devops"
version = "0.1.0"
description = ""
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.4.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pytest = "6.2.2"
requests = "^2.27.1"
wandb = "0.10.21"
mlflow = "1.24.0"
wheel = "^0.37.1"
hydra-core = "1.0.6"
seaborn = "^0.11.2"
pandas-profiling = "2.11.0"
pyarrow = "^7.0.0"
fastparquet = "^0.8.0"
scikit-learn = "0.24.1"
scipy = "1.8.0"
importlib-resources = "^5.6.0"
cloudpickle = "2.0.0"
dvc = {extras = ["gdrive"], version = "^2.10.1"}
fastapi = {extras = ["all"], version = "^0.75.1"}
pandera = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
